Teeworlds: bump version

--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="TeeWorlds"
 AppFullName=com.teeworlds
 
 # Application version code (integer)
-AppVersionCode=06220
+AppVersionCode=06320
 
 # Application user-visible version name (string)
-AppVersionName="0.6.2.20"
+AppVersionName="0.6.3.20"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -21,7 +21,7 @@ AppVersionName="0.6.2.20"
 AppDataDownloadUrl="Game data|data.zip"
 
 # Reset SDL config when updating application to the new version (y) / (n)
-ResetSdlConfigForThisVersion=y
+ResetSdlConfigForThisVersion=n
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
 DeleteFilesOnUpgrade="%"
@@ -72,7 +72,7 @@ CompatibilityHacksForceScreenUpdate=n
 
 # Application does not call SDL_Flip() or SDL_UpdateRects() after mouse click (ScummVM and all Amiga emulators do that) -
 # force screen update by moving mouse cursor a little after each click (y) or (n)
-CompatibilityHacksForceScreenUpdateMouseClick=y
+CompatibilityHacksForceScreenUpdateMouseClick=n
 
 # Application initializes SDL audio/video inside static constructors (which is bad, you won't be able to run ndk-gdb) (y)/(n)
 CompatibilityHacksStaticInit=n
@@ -108,13 +108,16 @@ AppNeedsTwoButtonMouse=n
 
 # Right mouse button can do long-press/drag&drop action, necessary for some games (y) or (n)
 # If you disable it, swiping with two fingers will send mouse wheel events
-RightMouseButtonLongPress=
+RightMouseButtonLongPress=n
 
 # Show SDL mouse cursor, for applications that do not draw cursor at all (y) or (n)
 ShowMouseCursor=n
 
+# Screen follows mouse cursor, when it's covered by soft keyboard, this works only in software video mode (y) or (n)
+ScreenFollowsMouse=n
+
 # Generate more touch events, by default SDL generates one event per one video frame, this is useful for drawing apps (y) or (n)
-GenerateSubframeTouchEvents=
+GenerateSubframeTouchEvents=n
 
 # Force relative (laptop) mouse movement mode, useful when both on-screen keyboard and mouse are needed (y) or (n)
 ForceRelativeMouseMode=n
@@ -124,7 +127,7 @@ AppNeedsArrowKeys=n
 
 # On-screen dpad/joystick will appear under finger when it touches the screen (y) or (n)
 # Joystick always follows finger, so moving mouse requires touching the screen with other finger
-FloatingScreenJoystick=
+FloatingScreenJoystick=n
 
 # Application needs text input (y) or (n), enables button for text input on screen
 AppNeedsTextInput=y
@@ -146,7 +149,7 @@ AppUsesAccelerometer=n
 AppUsesGyroscope=n
 
 # Use gyroscope to move mouse cursor (y) or (n), it eats battery, and can be disabled in settings, do not use with AppUsesGyroscope setting
-MoveMouseWithGyroscope=
+MoveMouseWithGyroscope=n
 
 # Application uses multitouch (y) or (n), multitouch events are passed as SDL_JOYBALLMOTION events for the joystick 0
 AppUsesMultitouch=n
@@ -188,10 +191,11 @@ RedefinedKeysScreenKb="RETURN PAGEDOWN PAGEUP TAB SPACE RCTRL"
 RedefinedKeysScreenKbNames="Hook Next_weapon Previous_weapon Show_scores Jump Fire"
 
 # On-screen keys theme
-# 0 = Ultimate Droid by Sean Stieber (green, with gamepad joystick)
-# 1 = Simple Theme by Beholder (white, with gamepad joystick)
+# 0 = Ultimate Droid by Sean Stieber (green, with cross joystick)
+# 1 = Simple Theme by Beholder (white, with cross joystick)
 # 2 = Sun by Sirea (yellow, with round joystick)
 # 3 = Keen by Gerstrong (multicolor, with round joystick)
+# 4 = Retro by Santiago Radeff (red/white, with cross joystick)
 TouchscreenKeysTheme=2
 
 # Redefine gamepad keys to SDL keysyms, button order is:
@@ -219,7 +223,7 @@ NDK_TOOLCHAIN_VERSION=
 
 # Specify architectures to compile, 'all' or 'y' to compile for all architectures.
 # Available architectures: armeabi armeabi-v7a armeabi-v7a-hard x86 mips
-MultiABI='armeabi-v7a' # armeabi armeabi-v7a x86 mips
+MultiABI='armeabi-v7a x86'
 
 # Optional shared libraries to compile - removing some of them will save space
 # MP3 support by libMAD is encumbered by patents and libMAD is GPL-ed
@@ -233,7 +237,7 @@ CustomBuildScript=n
 AppCflags='-O3'
 
 # Additional LDFLAGS for application
-AppLdflags='-lEGL'
+AppLdflags='-lEGL -fuse-ld=bfd'
 
 # If application has headers with the same name as system headers, this option tries to fix compiler flags to make it compilable
 AppOverlapsSystemHeaders=n
