Teeworlds: compile server binary for Android

--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="TeeWorlds"
 AppFullName=com.teeworlds
 
 # Application version code (integer)
-AppVersionCode=06320
+AppVersionCode=06322
 
 # Application user-visible version name (string)
-AppVersionName="0.6.3.20"
+AppVersionName="0.6.3.22"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -18,7 +18,7 @@ AppVersionName="0.6.3.20"
 # If the URL does not contain 'http://' it is treated as file from 'project/jni/application/src/AndroidData' dir -
 # these files are put inside .apk package by build system
 # You can specify Google Play expansion files in the form 'obb:main.12345' or 'obb:patch.12345' where 12345 is the app version, first associated with the file
-AppDataDownloadUrl="Game data|data.zip"
+AppDataDownloadUrl="!!Game data|data.zip^!!Server config|:server-config.txt:server-config.txt"
 
 # Reset SDL config when updating application to the new version (y) / (n)
 ResetSdlConfigForThisVersion=n
