--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="TeeWorlds"
 AppFullName=com.teeworlds
 
 # Application version code (integer)
-AppVersionCode=06323
+AppVersionCode=06324
 
 # Application user-visible version name (string)
-AppVersionName="0.6.3.23"
+AppVersionName="0.6.3.24"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -21,7 +21,7 @@ AppVersionName="0.6.3.23"
 AppDataDownloadUrl="!!Game data|data.zip^!!Server config|:server-config.txt:server-config.txt"
 
 # Reset SDL config when updating application to the new version (y) / (n)
-ResetSdlConfigForThisVersion=n
+ResetSdlConfigForThisVersion=y
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
 DeleteFilesOnUpgrade="%"
@@ -146,7 +146,10 @@ AppUsesThirdJoystick=y
 AppUsesAccelerometer=n
 
 # Application uses gyroscope (y) or (n), the gyroscope will be used as joystick 1 axes 2-4
-AppUsesGyroscope=n
+AppUsesGyroscope=y
+
+# Application uses orientation sensor (y) or (n), reported as joystick 1 axes 8-10
+AppUsesOrientationSensor=n
 
 # Use gyroscope to move mouse cursor (y) or (n), it eats battery, and can be disabled in settings, do not use with AppUsesGyroscope setting
 MoveMouseWithGyroscope=n
@@ -185,10 +188,10 @@ RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP"
 AppTouchscreenKeyboardKeysAmount=4
 
 # Redefine on-screen keyboard keys to SDL keysyms - 6 keyboard keys + 4 multitouch gestures (zoom in/out and rotate left/right)
-RedefinedKeysScreenKb="RETURN PAGEDOWN PAGEUP TAB SPACE RCTRL"
+RedefinedKeysScreenKb="RETURN PAGEDOWN RCTRL TAB SPACE PAGEUP"
 
 # Names for on-screen keyboard keys, such as Fire, Jump, Run etc, separated by spaces, they are used in SDL config menu
-RedefinedKeysScreenKbNames="Hook Next_weapon Previous_weapon Show_scores Jump Fire"
+RedefinedKeysScreenKbNames="Hook Next_weapon Fire Show_scores Jump Prev_weapon"
 
 # On-screen keys theme
 # 0 = Ultimate Droid by Sean Stieber (green, with cross joystick)
